# booking

./: .gitignore  Makefile  README.md  alembic.ini  docker-compose.dev-db.yml  prototype.drawio  pyproject.toml  setup.cfg  ~$prototype.drawio.dtmp
alembic/: env.py
alembic/versions/: 209707979561_first_name_last_name_user.py  6990d505d671_base_appointment_table.py  a4131e3275b6_appointments_complex_reference.py  adc71150a6e5_complex_model.py  c41f200dfd0f_base_user_table.py
booking/: database.py  main.py  settings.py
booking/api/: deps.py
booking/api/api_v1/: api.py
booking/api/api_v1/routers/: appointment.py  auth.py  complex.py  user.py
booking/auth/: base.py
booking/crud/: __init__.py  appointment.py  complex.py  user.py
booking/models/: appointment.py  complex.py  user.py
booking/schemas/: appointment.py  complex.py  user.py
