[tool.poetry]
name = "booking"
version = "0.1.0"
description = ""
authors = ["reboot"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.75.0"}
SQLAlchemy = "^1.4.32"
alembic = "^1.7.7"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
ipython = "^8.1.1"
wemake-python-styleguide = "^0.16.1"
mypy = "^0.942"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
